Fix Bugs =) and Update Mods

--- a/mods/interiors.pw.toml
+++ b/mods/interiors.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Interiors"
-filename = "interiors-0.5-30+mc1.19.2.jar"
+filename = "interiors-0.5.2+mc1.19.2-FORGE.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "42d8376b761cfc0eab7d56486c3bc87727e55560"
+hash = "0476cb807027f53fa61992cc65ae10cb6ef37e48"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4835268
+file-id = 4875870
 project-id = 906239
