--- a/mods/create-dreams-and-desires.pw.toml
+++ b/mods/create-dreams-and-desires.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Dreams & Desires"
-filename = "Create-Dreams-n-Desires-1.19.2-0.2a.PREBETA.jar"
+filename = "Create-Dreams-n-Desires-1.19.2-0.2b.PREBETA.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/JmybsfWs/versions/lLhDmF1Y/Create-Dreams-n-Desires-1.19.2-0.2a.PREBETA.jar"
+url = "https://cdn.modrinth.com/data/JmybsfWs/versions/uzrt7Ops/Create-Dreams-n-Desires-1.19.2-0.2b.PREBETA.jar"
 hash-format = "sha1"
-hash = "417f59c0acce5e22e47d50a9dac0f29f2b2cc289"
+hash = "4f79f058fe373d81abe50488e331c0e3d01243b6"
 
 [update]
 [update.modrinth]
 mod-id = "JmybsfWs"
-version = "lLhDmF1Y"
+version = "uzrt7Ops"
