--- a/mods/fusion-connected-textures.pw.toml
+++ b/mods/fusion-connected-textures.pw.toml
@@ -1,13 +1,13 @@
 name = "Fusion (Connected Textures)"
-filename = "fusion-1.0.6-forge-mc1.19.2.jar"
+filename = "fusion-1.1.0a-forge-mc1.19.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "02b1d1180dff02db1d04578f4773911123d965ac"
+hash = "12e46088a042f26bcbfdb37d30d6e5811ee885a8"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4771452
+file-id = 4861608
 project-id = 854949
