--- a/mods/create-dreams-and-desires.pw.toml
+++ b/mods/create-dreams-and-desires.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Dreams & Desires"
-filename = "Create-Dreams-n-Desires-1.19.2-0.2b.PREBETA.jar"
+filename = "Create-Dreams-n-Desires-1.19.2-0.2c.PREBETA.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/JmybsfWs/versions/uzrt7Ops/Create-Dreams-n-Desires-1.19.2-0.2b.PREBETA.jar"
+url = "https://cdn.modrinth.com/data/JmybsfWs/versions/9OmEJ9a3/Create-Dreams-n-Desires-1.19.2-0.2c.PREBETA.jar"
 hash-format = "sha1"
-hash = "4f79f058fe373d81abe50488e331c0e3d01243b6"
+hash = "d48f07fc63dd9dc97d04dea27765363fe1386782"
 
 [update]
 [update.modrinth]
 mod-id = "JmybsfWs"
-version = "uzrt7Ops"
+version = "9OmEJ9a3"
