--- a/mods/embeddium.pw.toml
+++ b/mods/embeddium.pw.toml
@@ -1,13 +1,13 @@
 name = "Embeddium"
-filename = "embeddium-0.2.9+mc1.19.2.jar"
+filename = "embeddium-0.2.12+mc1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/sk9rgfiA/versions/fUvrPCLk/embeddium-0.2.9%2Bmc1.19.2.jar"
+url = "https://cdn.modrinth.com/data/sk9rgfiA/versions/vlIcINb8/embeddium-0.2.12%2Bmc1.19.2.jar"
 hash-format = "sha1"
-hash = "8eb8431440e5ebc23db90798f8bc030c618584d1"
+hash = "fee2ac1dbb066cd295a4116de2232cd7da83976e"
 
 [update]
 [update.modrinth]
 mod-id = "sk9rgfiA"
-version = "fUvrPCLk"
+version = "vlIcINb8"
