--- a/mods/create-dreams-and-desires.pw.toml
+++ b/mods/create-dreams-and-desires.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Dreams & Desires"
-filename = "Create-Dreams-n-Desires-1.19.2-0.2c.PREBETA.jar"
+filename = "Create-Dreams-n-Desires-1.19.2-0.2.5b.PREBETA.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/JmybsfWs/versions/9OmEJ9a3/Create-Dreams-n-Desires-1.19.2-0.2c.PREBETA.jar"
+url = "https://cdn.modrinth.com/data/JmybsfWs/versions/7acX2sGJ/Create-Dreams-n-Desires-1.19.2-0.2.5b.PREBETA.jar"
 hash-format = "sha1"
-hash = "d48f07fc63dd9dc97d04dea27765363fe1386782"
+hash = "1d5c8fe4e24fdbf31c5e4c7e0cdfe11d54469a2b"
 
 [update]
 [update.modrinth]
 mod-id = "JmybsfWs"
-version = "9OmEJ9a3"
+version = "7acX2sGJ"
