--- a/mods/incubation.pw.toml
+++ b/mods/incubation.pw.toml
@@ -1,13 +1,13 @@
 name = "Incubation"
-filename = "incubation-1.19.2-3.0.1.jar"
+filename = "incubation-1.20.1-4.0.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/A4Xrv60A/versions/WStsHrBT/incubation-1.20.1-4.0.0.jar"
 hash-format = "sha1"
-hash = "dc98d35f181ab6d574666310e9bd6687b3f84bf5"
-mode = "metadata:curseforge"
+hash = "f4d80e83717e0f9246cef6ee79a2bd243565884b"
 
 [update]
-[update.curseforge]
-file-id = 4776209
-project-id = 361718
+[update.modrinth]
+mod-id = "A4Xrv60A"
+version = "WStsHrBT"
