--- a/mods/alexs-mobs.pw.toml
+++ b/mods/alexs-mobs.pw.toml
@@ -1,13 +1,13 @@
 name = "Alex's Mobs"
-filename = "alexsmobs-1.21.1.jar"
+filename = "alexsmobs-1.22.8.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/2cMuAZAp/versions/oaRqJ7uM/alexsmobs-1.22.8.jar"
 hash-format = "sha1"
-hash = "ce80c8aeed6faa497db2b917da51405c3f273bd8"
-mode = "metadata:curseforge"
+hash = "1bf92f4c70a4e01af077600d5543a63812e4d815"
 
 [update]
-[update.curseforge]
-file-id = 4159154
-project-id = 426558
+[update.modrinth]
+mod-id = "2cMuAZAp"
+version = "oaRqJ7uM"
