--- a/mods/blueprint.pw.toml
+++ b/mods/blueprint.pw.toml
@@ -1,13 +1,13 @@
 name = "Blueprint"
-filename = "blueprint-1.19.2-6.2.0.jar"
+filename = "blueprint-1.20.1-7.0.3.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/VsM5EDoI/versions/l3Z9H5ed/blueprint-1.20.1-7.0.3.jar"
 hash-format = "sha1"
-hash = "5ca0f02b058e42d6dd33051e5b4b1d928b6b7e16"
-mode = "metadata:curseforge"
+hash = "0c087a746637414167e21da1bed649197b494f6f"
 
 [update]
-[update.curseforge]
-file-id = 4749000
-project-id = 382216
+[update.modrinth]
+mod-id = "VsM5EDoI"
+version = "l3Z9H5ed"
