--- a/mods/bookshelf-lib.pw.toml
+++ b/mods/bookshelf-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "Bookshelf"
-filename = "Bookshelf-Forge-1.19.2-16.3.20.jar"
+filename = "Bookshelf-Forge-1.20.1-20.1.10.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/uy4Cnpcm/versions/IL6yVQcP/Bookshelf-Forge-1.19.2-16.3.20.jar"
+url = "https://cdn.modrinth.com/data/uy4Cnpcm/versions/zozOd4AM/Bookshelf-Forge-1.20.1-20.1.10.jar"
 hash-format = "sha1"
-hash = "0129da71db70f19703cd594d6d931b465e6a963f"
+hash = "6f9ac2d30eb64781ddd47ddf0b2ea84c32501e03"
 
 [update]
 [update.modrinth]
 mod-id = "uy4Cnpcm"
-version = "IL6yVQcP"
+version = "zozOd4AM"
