--- a/mods/citadel.pw.toml
+++ b/mods/citadel.pw.toml
@@ -1,13 +1,13 @@
 name = "Citadel"
-filename = "citadel-2.1.4-1.19.jar"
+filename = "citadel-2.5.4-1.20.1.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/jJfV67b1/versions/ssXkoBKk/citadel-2.5.4-1.20.1.jar"
 hash-format = "sha1"
-hash = "59a080397f767536f85bee28eb805e12d0317bdd"
-mode = "metadata:curseforge"
+hash = "e7f209ae09cf818ecf98698482b82a1cbe0fe058"
 
 [update]
-[update.curseforge]
-file-id = 4556677
-project-id = 331936
+[update.modrinth]
+mod-id = "jJfV67b1"
+version = "ssXkoBKk"
