--- a/mods/clayworks.pw.toml
+++ b/mods/clayworks.pw.toml
@@ -1,13 +1,13 @@
 name = "Clayworks"
-filename = "clayworks-1.19.2-2.1.0.jar"
+filename = "clayworks-1.20.1-3.0.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/1iicrEO3/versions/oxBuA73t/clayworks-1.20.1-3.0.0.jar"
 hash-format = "sha1"
-hash = "cbbd9b65d6d99d99a8131888ea6670b2f4fa8329"
-mode = "metadata:curseforge"
+hash = "8751b71faad70b4ea440e4b8ca388910318b05c5"
 
 [update]
-[update.curseforge]
-file-id = 4776086
-project-id = 592162
+[update.modrinth]
+mod-id = "1iicrEO3"
+version = "oxBuA73t"
