--- a/mods/configured.pw.toml
+++ b/mods/configured.pw.toml
@@ -1,13 +1,13 @@
 name = "Configured"
-filename = "configured-2.1.1-1.19.2.jar"
+filename = "configured-forge-1.20.1-2.2.3.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "27e301553d9850386395bd199805999c3bd9184a"
+hash = "065c2d287a52f52fc8d33d780192325ee6f4b6ae"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4462837
+file-id = 5180900
 project-id = 457570
