--- a/mods/create-central-kitchen.pw.toml
+++ b/mods/create-central-kitchen.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Central Kitchen"
-filename = "create_central_kitchen-1.19.2-for-create-0.5.1.f-1.3.9.e.jar"
+filename = "create_central_kitchen-1.20.1-for-create-0.5.1.f-1.3.12.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/btq68HMO/versions/MX3EE060/create_central_kitchen-1.20.1-for-create-0.5.1.f-1.3.12.jar"
 hash-format = "sha1"
-hash = "52872a9846e6d57b3d2797fd0433d17c8c3ee488"
-mode = "metadata:curseforge"
+hash = "92f89bdf6868c2f2b44e8a7acdc0da4be108ba1b"
 
 [update]
-[update.curseforge]
-file-id = 4839028
-project-id = 820977
+[update.modrinth]
+mod-id = "btq68HMO"
+version = "MX3EE060"
