--- a/mods/create-deco.pw.toml
+++ b/mods/create-deco.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Deco"
-filename = "createdeco-1.3.3-1.19.2.jar"
+filename = "createdeco-2.0.1-1.20.1-forge.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/sMvUb4Rb/versions/EcZilZTT/createdeco-2.0.1-1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "82ba4a2534670c52a91803704bfd343289408a0a"
-mode = "metadata:curseforge"
+hash = "eec59db87da77b216e7597a2983d6cdb6c7e723d"
 
 [update]
-[update.curseforge]
-file-id = 4554164
-project-id = 509285
+[update.modrinth]
+mod-id = "sMvUb4Rb"
+version = "EcZilZTT"
