--- a/mods/create-dreams-and-desires.pw.toml
+++ b/mods/create-dreams-and-desires.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Dreams & Desires"
-filename = "Create-Dreams-n-Desires-1.19.2-0.2.5b.PREBETA.jar"
+filename = "Create-Dreams-n-Desires-1.20.1-0.2c.PREBETA.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/JmybsfWs/versions/7acX2sGJ/Create-Dreams-n-Desires-1.19.2-0.2.5b.PREBETA.jar"
+url = "https://cdn.modrinth.com/data/JmybsfWs/versions/4zjj5Jhw/Create-Dreams-n-Desires-1.20.1-0.2c.PREBETA.jar"
 hash-format = "sha1"
-hash = "1d5c8fe4e24fdbf31c5e4c7e0cdfe11d54469a2b"
+hash = "008d66ed08847bd06fe23641aca6ab9f1edfab32"
 
 [update]
 [update.modrinth]
 mod-id = "JmybsfWs"
-version = "7acX2sGJ"
+version = "4zjj5Jhw"
