--- a/mods/createaddition.pw.toml
+++ b/mods/createaddition.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Crafts & Additions"
-filename = "createaddition-1.19.2-1.2.1.jar"
+filename = "createaddition-1.20.1-1.2.2.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/kU1G12Nn/versions/GsWhwScL/createaddition-1.20.1-1.2.2.jar"
 hash-format = "sha1"
-hash = "92955c4ed8187257862ad03033cb08c9e2cf6148"
-mode = "metadata:curseforge"
+hash = "0869d45f0d94ab45f1f7b9987990890117407dce"
 
 [update]
-[update.curseforge]
-file-id = 4929703
-project-id = 439890
+[update.modrinth]
+mod-id = "kU1G12Nn"
+version = "GsWhwScL"
