--- a/mods/delightful.pw.toml
+++ b/mods/delightful.pw.toml
@@ -1,13 +1,13 @@
 name = "Delightful"
-filename = "Delightful-1.19.2-3.4.1.jar"
+filename = "Delightful-1.20.1-3.5.2.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/JtSnhtNJ/versions/tbDBi4m9/Delightful-1.20.1-3.5.2.jar"
 hash-format = "sha1"
-hash = "531b4031e28fc5c72ae2584f9123f9439d633342"
-mode = "metadata:curseforge"
+hash = "752776b1687e97e78c1c10708ae70ff9cf256c19"
 
 [update]
-[update.curseforge]
-file-id = 4792851
-project-id = 637529
+[update.modrinth]
+mod-id = "JtSnhtNJ"
+version = "tbDBi4m9"
