--- a/mods/dungeons-plus.pw.toml
+++ b/mods/dungeons-plus.pw.toml
@@ -1,13 +1,13 @@
 name = "Dungeons Plus"
-filename = "dungeons_plus-1.19.2-1.3.1.jar"
+filename = "dungeons_plus-1.20.1-1.5.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/5fNJnSba/versions/eShjmutg/dungeons_plus-1.19.2-1.3.1.jar"
+url = "https://cdn.modrinth.com/data/5fNJnSba/versions/PmMZr5jQ/dungeons_plus-1.20.1-1.5.0.jar"
 hash-format = "sha1"
-hash = "43919e1249c3655db758553c8485163854a623be"
+hash = "964aba479a6a9f03dd53dd57ee753a2237910064"
 
 [update]
 [update.modrinth]
 mod-id = "5fNJnSba"
-version = "eShjmutg"
+version = "PmMZr5jQ"
