--- a/mods/embeddium.pw.toml
+++ b/mods/embeddium.pw.toml
@@ -1,13 +1,13 @@
 name = "Embeddium"
-filename = "embeddium-0.2.12+mc1.19.2.jar"
+filename = "embeddium-0.3.14+mc1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/sk9rgfiA/versions/vlIcINb8/embeddium-0.2.12%2Bmc1.19.2.jar"
+url = "https://cdn.modrinth.com/data/sk9rgfiA/versions/Yf0WdDp1/embeddium-0.3.14%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "fee2ac1dbb066cd295a4116de2232cd7da83976e"
+hash = "efedfabdac3301016478688f3d19d2be25e743a7"
 
 [update]
 [update.modrinth]
 mod-id = "sk9rgfiA"
-version = "vlIcINb8"
+version = "Yf0WdDp1"
