--- a/mods/enchantment-descriptions.pw.toml
+++ b/mods/enchantment-descriptions.pw.toml
@@ -1,13 +1,13 @@
 name = "Enchantment Descriptions"
-filename = "EnchantmentDescriptions-Forge-1.19.2-13.0.14.jar"
+filename = "EnchantmentDescriptions-Forge-1.20.1-17.0.14.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/UVtY3ZAC/versions/Gw7efrux/EnchantmentDescriptions-Forge-1.19.2-13.0.14.jar"
+url = "https://cdn.modrinth.com/data/UVtY3ZAC/versions/jpf7NOlL/EnchantmentDescriptions-Forge-1.20.1-17.0.14.jar"
 hash-format = "sha1"
-hash = "20bf3e1c6e100e0e34d0b5f3d92512afead735ad"
+hash = "c588f932dcb7796ad6d334abd43777e718957058"
 
 [update]
 [update.modrinth]
 mod-id = "UVtY3ZAC"
-version = "Gw7efrux"
+version = "jpf7NOlL"
