--- a/mods/farmers-delight.pw.toml
+++ b/mods/farmers-delight.pw.toml
@@ -1,13 +1,13 @@
 name = "Farmer's Delight"
-filename = "FarmersDelight-1.19.2-1.2.3.jar"
+filename = "FarmersDelight-1.20.1-1.2.4.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/R2OftAxM/versions/AxgOboGq/FarmersDelight-1.20.1-1.2.4.jar"
 hash-format = "sha1"
-hash = "a55ca7720cd4142a146c6ad4309aa79c646eeec5"
-mode = "metadata:curseforge"
+hash = "71daa55fd88b6f181c51ec6892600415df591f64"
 
 [update]
-[update.curseforge]
-file-id = 4679318
-project-id = 398521
+[update.modrinth]
+mod-id = "R2OftAxM"
+version = "AxgOboGq"
