--- a/mods/fusion-connected-textures.pw.toml
+++ b/mods/fusion-connected-textures.pw.toml
@@ -1,13 +1,13 @@
 name = "Fusion (Connected Textures)"
-filename = "fusion-1.1.0b-forge-mc1.19.2.jar"
-side = "both"
+filename = "fusion-1.1.1-forge-mc1.20.1.jar"
+side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/p19vrgc2/versions/oA5jxU4i/fusion-1.1.1-forge-mc1.20.1.jar"
 hash-format = "sha1"
-hash = "5a7f9ddf64d70fc3775744e39b851a3d80e17025"
-mode = "metadata:curseforge"
+hash = "d45b7aa1be6d65a6c8c1d0b8fb7da07f1ea56c2f"
 
 [update]
-[update.curseforge]
-file-id = 4880271
-project-id = 854949
+[update.modrinth]
+mod-id = "p19vrgc2"
+version = "oA5jxU4i"
