--- a/mods/idas.pw.toml
+++ b/mods/idas.pw.toml
@@ -1,13 +1,13 @@
-name = "Integrated Dungeons and Structures"
-filename = "idas_forge-1.7.6+1.19.2.jar"
+name = " Integrated Dungeons and Structures"
+filename = "idas_forge-1.9.3+1.20.1.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/Z8OZShAU/versions/iqoaC22M/idas_forge-1.9.3%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "5a6d73e376b7e7fbf3acdded496c35200d555ffc"
-mode = "metadata:curseforge"
+hash = "28af49e9dbe62e2d15f63015313b36fd1a89f0f2"
 
 [update]
-[update.curseforge]
-file-id = 4635090
-project-id = 605375
+[update.modrinth]
+mod-id = "Z8OZShAU"
+version = "iqoaC22M"
