--- a/mods/jade.pw.toml
+++ b/mods/jade.pw.toml
@@ -1,13 +1,13 @@
 name = "Jade 🔍"
-filename = "Jade-1.19.1-forge-8.9.2.jar"
+filename = "Jade-1.20.1-forge-11.8.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/nvQzSEkH/versions/akD4smps/Jade-1.20.1-forge-11.8.0.jar"
 hash-format = "sha1"
-hash = "2b56ea1b7ee6e20cea675427d8c87f115a44fcff"
-mode = "metadata:curseforge"
+hash = "bc7eca506af9e754b6283af15ba5a35532a96683"
 
 [update]
-[update.curseforge]
-file-id = 4914105
-project-id = 324717
+[update.modrinth]
+mod-id = "nvQzSEkH"
+version = "akD4smps"
