--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
-name = "Just Enough Items (JEI)"
-filename = "jei-1.19.2-forge-11.6.0.1018.jar"
-side = "both"
+name = "Just Enough Items"
+filename = "jei-1.20.1-forge-15.3.0.4.jar"
+side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/PeYsGsQy/jei-1.20.1-forge-15.3.0.4.jar"
 hash-format = "sha1"
-hash = "494718358db5fb2ef766eea0a174abc7b3abc04a"
-mode = "metadata:curseforge"
+hash = "1a431d34991d51998f9971c4291bac2d58eaa154"
 
 [update]
-[update.curseforge]
-file-id = 4712866
-project-id = 238222
+[update.modrinth]
+mod-id = "u6dRKJwZ"
+version = "PeYsGsQy"
