--- a/mods/macaws-trapdoors.pw.toml
+++ b/mods/macaws-trapdoors.pw.toml
@@ -1,13 +1,13 @@
 name = "Macaw's Trapdoors"
-filename = "mcw-trapdoors-1.1.2-mc1.19.2forge.jar"
+filename = "mcw-trapdoors-1.1.2-mc1.20.1forge.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/n2fvCDlM/versions/4qeFtdJe/mcw-trapdoors-1.1.2-mc1.20.1forge.jar"
 hash-format = "sha1"
-hash = "b93768f98ee64ac0b25885e5ef3daa172239e616"
-mode = "metadata:curseforge"
+hash = "23b4a000e5dbcef4a8d86f2a7111632d9e80a893"
 
 [update]
-[update.curseforge]
-file-id = 4841549
-project-id = 400933
+[update.modrinth]
+mod-id = "n2fvCDlM"
+version = "4qeFtdJe"
