--- a/mods/mouse-tweaks.pw.toml
+++ b/mods/mouse-tweaks.pw.toml
@@ -1,13 +1,13 @@
 name = "Mouse Tweaks"
-filename = "MouseTweaks-forge-mc1.19-2.23.jar"
-side = "both"
+filename = "MouseTweaks-forge-mc1.20-2.25.jar"
+side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/aC3cM3Vq/versions/stb5nE30/MouseTweaks-forge-mc1.20-2.25.jar"
 hash-format = "sha1"
-hash = "9d6e76a331c0598edb6293dc658af2d1672864b4"
-mode = "metadata:curseforge"
+hash = "f3e8805d706a36717306d92bd5c45cb2aef854b6"
 
 [update]
-[update.curseforge]
-file-id = 3871353
-project-id = 60089
+[update.modrinth]
+mod-id = "aC3cM3Vq"
+version = "stb5nE30"
