--- a/mods/structure-gel-api.pw.toml
+++ b/mods/structure-gel-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Structure Gel API"
-filename = "structure_gel-1.19.2-2.7.3.jar"
+filename = "structure_gel-1.20.1-2.16.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/T8TGycIQ/versions/bsBVjIWk/structure_gel-1.19.2-2.7.3.jar"
+url = "https://cdn.modrinth.com/data/T8TGycIQ/versions/FQtCiGpd/structure_gel-1.20.1-2.16.1.jar"
 hash-format = "sha1"
-hash = "bb51b7f6c13ece3dd15f417b2442a9b435841b88"
+hash = "454277fac79d9a866717b811de9041b7723fb60e"
 
 [update]
 [update.modrinth]
 mod-id = "T8TGycIQ"
-version = "bsBVjIWk"
+version = "FQtCiGpd"
