--- a/mods/supermartijn642s-core-lib.pw.toml
+++ b/mods/supermartijn642s-core-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "SuperMartijn642's Core Lib"
-filename = "supermartijn642corelib-1.1.16-forge-mc1.19.2.jar"
+filename = "supermartijn642corelib-1.1.17-forge-mc1.20.1.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/rOUBggPv/versions/U92Le4sE/supermartijn642corelib-1.1.17-forge-mc1.20.1.jar"
 hash-format = "sha1"
-hash = "1aa9b58cd1a2ced9b782acdcd10725c0a3c8ac7e"
-mode = "metadata:curseforge"
+hash = "f2c3d1aa0bef8663700b9438f789c15cfd72137d"
 
 [update]
-[update.curseforge]
-file-id = 4926970
-project-id = 454372
+[update.modrinth]
+mod-id = "rOUBggPv"
+version = "U92Le4sE"
