--- a/mods/terrablender.pw.toml
+++ b/mods/terrablender.pw.toml
@@ -1,13 +1,13 @@
-name = "TerraBlender (Forge)"
-filename = "TerraBlender-forge-1.19.2-2.0.1.166.jar"
+name = "TerraBlender"
+filename = "TerraBlender-forge-1.20.1-3.0.1.4.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/kkmrDlKT/versions/htFwnGWu/TerraBlender-forge-1.20.1-3.0.1.4.jar"
 hash-format = "sha1"
-hash = "655f0fe28df282a2f4a14a75f059485ce1c96e46"
-mode = "metadata:curseforge"
+hash = "a42eb3ad40ba294ddf137e37cd640e4f9b1a9435"
 
 [update]
-[update.curseforge]
-file-id = 4618490
-project-id = 563928
+[update.modrinth]
+mod-id = "kkmrDlKT"
+version = "htFwnGWu"
