--- a/mods/woodworks.pw.toml
+++ b/mods/woodworks.pw.toml
@@ -1,13 +1,13 @@
 name = "Woodworks"
-filename = "woodworks-1.19.2-2.2.2.jar"
+filename = "woodworks-1.20.1-3.0.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/rv1sovni/versions/sWSUyVeA/woodworks-1.20.1-3.0.0.jar"
 hash-format = "sha1"
-hash = "0fb8b73164a7069579fbcd1dc6ac7ad4fd0121be"
-mode = "metadata:curseforge"
+hash = "ea90e5ba354805260d35432f99f9586b928db573"
 
 [update]
-[update.curseforge]
-file-id = 4776123
-project-id = 543610
+[update.modrinth]
+mod-id = "rv1sovni"
+version = "sWSUyVeA"
