--- a/mods/yungs-better-dungeons.pw.toml
+++ b/mods/yungs-better-dungeons.pw.toml
@@ -1,13 +1,13 @@
 name = "YUNG's Better Dungeons"
-filename = "YungsBetterDungeons-1.19.2-Forge-3.2.2.jar"
+filename = "YungsBetterDungeons-1.20-Forge-4.0.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/o1C1Dkj5/versions/vhbhPrpZ/YungsBetterDungeons-1.19.2-Forge-3.2.2.jar"
+url = "https://cdn.modrinth.com/data/o1C1Dkj5/versions/kPiQ6v4q/YungsBetterDungeons-1.20-Forge-4.0.4.jar"
 hash-format = "sha1"
-hash = "19b6a62a62343d52c2855eabe3634ce44fb6f81e"
+hash = "67a9e1c2ff126ab54cea8e0709d178915243039e"
 
 [update]
 [update.modrinth]
 mod-id = "o1C1Dkj5"
-version = "vhbhPrpZ"
+version = "kPiQ6v4q"
