--- a/mods/create-ratatouille.pw.toml
+++ b/mods/create-ratatouille.pw.toml
@@ -1,6 +1,6 @@
 name = "Create Ratatouille"
 filename = "create_ratatouille-1.20.1-1.0.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/XM0ifg8q/versions/FwuHN9jZ/create_ratatouille-1.20.1-1.0.jar"
