--- a/mods/create-aquatic-ambitions.pw.toml
+++ b/mods/create-aquatic-ambitions.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Aquatic Ambitions"
-filename = "create_aquatic_ambitions-1.20.1-1.0.0.jar"
+filename = "create_aquatic_ambitions-1.20.1-1.1.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9SyaPzp7/versions/3t9BylHB/create_aquatic_ambitions-1.20.1-1.0.0.jar"
+url = "https://cdn.modrinth.com/data/9SyaPzp7/versions/GEvwT1ys/create_aquatic_ambitions-1.20.1-1.1.0.jar"
 hash-format = "sha1"
-hash = "89ffee689d423ae6b7767c252362712fa888f51b"
+hash = "91ac187b2183568e92debdd8cd40d3d3f5d09659"
 
 [update]
 [update.modrinth]
 mod-id = "9SyaPzp7"
-version = "3t9BylHB"
+version = "GEvwT1ys"
