--- a/mods/create-railways-navigator.pw.toml
+++ b/mods/create-railways-navigator.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Railways Navigator"
-filename = "createrailwaysnavigator-0.4.1-beta-1.20.1.jar"
+filename = "createrailwaysnavigator-0.5.2-beta-1.20.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Dq3STxps/versions/aLFHc6EA/createrailwaysnavigator-0.4.1-beta-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/Dq3STxps/versions/iGw0N7j9/createrailwaysnavigator-0.5.2-beta-1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "b2edd8db406838dc7b3105415dfdc87e806e3909"
+hash = "b67cc5152c1d8adfdd22f825153853019bf6e4c6"
 
 [update]
 [update.modrinth]
 mod-id = "Dq3STxps"
-version = "aLFHc6EA"
+version = "iGw0N7j9"
