--- a/mods/delightful.pw.toml
+++ b/mods/delightful.pw.toml
@@ -1,13 +1,13 @@
 name = "Delightful"
-filename = "Delightful-1.20.1-3.5.2.jar"
+filename = "Delightful-1.20.1-3.5.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/JtSnhtNJ/versions/tbDBi4m9/Delightful-1.20.1-3.5.2.jar"
+url = "https://cdn.modrinth.com/data/JtSnhtNJ/versions/RHlR4idq/Delightful-1.20.1-3.5.4.jar"
 hash-format = "sha1"
-hash = "752776b1687e97e78c1c10708ae70ff9cf256c19"
+hash = "86750926bb6fb4e2e64ee47c635471b5ffb64fed"
 
 [update]
 [update.modrinth]
 mod-id = "JtSnhtNJ"
-version = "tbDBi4m9"
+version = "RHlR4idq"
