--- a/mods/embeddium.pw.toml
+++ b/mods/embeddium.pw.toml
@@ -1,13 +1,13 @@
 name = "Embeddium"
-filename = "embeddium-0.3.14+mc1.20.1.jar"
+filename = "embeddium-0.3.18+mc1.20.1-all.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/sk9rgfiA/versions/Yf0WdDp1/embeddium-0.3.14%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/sk9rgfiA/versions/RieuySG8/embeddium-0.3.18%2Bmc1.20.1-all.jar"
 hash-format = "sha1"
-hash = "efedfabdac3301016478688f3d19d2be25e743a7"
+hash = "2319894c1730d1d5f3fcec810989af3a8d868e9a"
 
 [update]
 [update.modrinth]
 mod-id = "sk9rgfiA"
-version = "Yf0WdDp1"
+version = "RieuySG8"
