--- a/mods/terrablender.pw.toml
+++ b/mods/terrablender.pw.toml
@@ -1,13 +1,13 @@
 name = "TerraBlender"
-filename = "TerraBlender-forge-1.20.1-3.0.1.4.jar"
+filename = "TerraBlender-forge-1.20.1-3.0.1.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/kkmrDlKT/versions/htFwnGWu/TerraBlender-forge-1.20.1-3.0.1.4.jar"
+url = "https://cdn.modrinth.com/data/kkmrDlKT/versions/oCGyhKcY/TerraBlender-forge-1.20.1-3.0.1.6.jar"
 hash-format = "sha1"
-hash = "a42eb3ad40ba294ddf137e37cd640e4f9b1a9435"
+hash = "d26009097ce802052fcd1b05a90b2f346ee6655a"
 
 [update]
 [update.modrinth]
 mod-id = "kkmrDlKT"
-version = "htFwnGWu"
+version = "oCGyhKcY"
