--- a/mods/enchantment-descriptions.pw.toml
+++ b/mods/enchantment-descriptions.pw.toml
@@ -1,13 +1,13 @@
 name = "Enchantment Descriptions"
-filename = "EnchantmentDescriptions-Forge-1.20.1-17.0.14.jar"
+filename = "EnchantmentDescriptions-Forge-1.20.1-17.0.15.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/UVtY3ZAC/versions/jpf7NOlL/EnchantmentDescriptions-Forge-1.20.1-17.0.14.jar"
+url = "https://cdn.modrinth.com/data/UVtY3ZAC/versions/P4T8CChc/EnchantmentDescriptions-Forge-1.20.1-17.0.15.jar"
 hash-format = "sha1"
-hash = "c588f932dcb7796ad6d334abd43777e718957058"
+hash = "3a74fe0e8907520df16759f33a69804c2b91a070"
 
 [update]
 [update.modrinth]
 mod-id = "UVtY3ZAC"
-version = "jpf7NOlL"
+version = "P4T8CChc"
