--- a/mods/jade.pw.toml
+++ b/mods/jade.pw.toml
@@ -1,13 +1,13 @@
 name = "Jade 🔍"
-filename = "Jade-1.20.1-forge-11.9.1.jar"
+filename = "Jade-1.20.1-forge-11.9.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nvQzSEkH/versions/AXsURWBl/Jade-1.20.1-forge-11.9.1.jar"
+url = "https://cdn.modrinth.com/data/nvQzSEkH/versions/X6kFPDSp/Jade-1.20.1-forge-11.9.2.jar"
 hash-format = "sha1"
-hash = "de128914a1b9eec457094d45bfc1308f348c75a9"
+hash = "c393847a8a8fc5ed6f594a12618e68900abe447c"
 
 [update]
 [update.modrinth]
 mod-id = "nvQzSEkH"
-version = "AXsURWBl"
+version = "X6kFPDSp"
