--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.17-forge.jar"
+filename = "moonlight-1.20-2.11.31-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/7saLSGbf/moonlight-1.20-2.11.17-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/arDcM3bX/moonlight-1.20-2.11.31-forge.jar"
 hash-format = "sha1"
-hash = "9f2916e547f609df35a94693e6b576fd661d9abf"
+hash = "336c7e47898b90ea4468abbb33c9a6c92360e69c"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "7saLSGbf"
+version = "arDcM3bX"
