--- a/mods/polymorph.pw.toml
+++ b/mods/polymorph.pw.toml
@@ -1,13 +1,13 @@
 name = "Polymorph"
-filename = "polymorph-forge-0.49.3+1.20.1.jar"
+filename = "polymorph-forge-0.49.5+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/tagwiZkJ/versions/iaqnjwBU/polymorph-forge-0.49.3%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/tagwiZkJ/versions/V6TZ8mE6/polymorph-forge-0.49.5%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "8819c19fb9065baf5092be601ab1042f15de4cc1"
+hash = "94592f3ffba15b991118e7dbea99b7f10aa6c0cc"
 
 [update]
 [update.modrinth]
 mod-id = "tagwiZkJ"
-version = "iaqnjwBU"
+version = "V6TZ8mE6"
